@@ -1,195 +1,194 @@
 package io.github.jinahya.hectofinancial.firmbanking.fulltext;
 
-import java.nio.ByteBuffer;
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.ArrayList;
 import java.util.Collections;
+import java.util.EnumMap;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 
+@SuppressWarnings({
+        "java:S100" // Method names should comply with a naming convention
+})
 public abstract class FullTextSection {
 
+    // ------------------------------------------------------------------------------------------ STATIC_FACTORY_METHODS
+
     /**
-     * An interface for building instances of {@link FullTextSection}.
+     * Returns a new instance of the {@code 공통부} for specified category.
      *
-     * @param <T> self type parameter
+     * @param category the category.
+     * @return a new instance for the {@code 공통부} for {@code category}.
      */
-    public interface Builder<T extends Builder<T>> {
-
-        T add(final FullTextSegment segment);
-
-        FullTextSection build();
-    }
-
-    private abstract static class BuilderImpl
-            implements Builder<BuilderImpl> {
-
-        private BuilderImpl() {
-            super();
-        }
-
-        @Override
-        public BuilderImpl add(final FullTextSegment segment) {
-            Objects.requireNonNull(segment, "segment is null");
-            segment.setPrevious(previous);
-            segments.add(segment);
-            previous = segment;
-            return this;
-        }
-
-        @Override
-        public FullTextSection build() {
-            if (segments.isEmpty()) {
-                throw new IllegalStateException("no segments have been added");
-            }
-            try {
-                return new FullTextSection(this) {
-                };
-            } finally {
-                segments.clear();
-            }
-        }
-
-        private final List<FullTextSegment> segments = new ArrayList<>();
-
-        private FullTextSegment previous;
-    }
-
-    // -----------------------------------------------------------------------------------------------------------------
-    @SuppressWarnings({
-            "java:S1452" // Generic wildcard types should not be used in return types
-    })
-    public static Builder<?> builder() {
-        return new BuilderImpl() {
+    static FullTextSection newHeadInstance(final FullTextCategory category) {
+        return new FullTextSection(FullTextSectionUtils.loadSegments(category.name() + ".segments")) {
         };
     }
 
-    // -----------------------------------------------------------------------------------------------------------------
+    private static final Map<FullTextCategory, Map<String, Map<String, List<FullTextSegment>>>> MAP =
+            Collections.synchronizedMap(new EnumMap<>(FullTextCategory.class));
 
     /**
-     * {@code 공통부} 개체를 반환한다.
+     * Returns a new instance for specified category, {@code 전문구분코드}, and {@code 업무구분코드}.
      *
-     * @return {@code 공통부} 개체.
+     * @param category the category.
+     * @param textCode the {@code 전문구분코드}.
+     * @param taskCode the {@code 업무구분코드}.
+     * @return a new instance.
      */
-    public static FullTextSection newInstanceForCommonSection() {
-        return builder()
-                .add(FullTextSegment.newInstanceOfX(9))  //  1 식별코드
-                .add(FullTextSegment.newInstanceOfX(12)) //  2 업체번호
-                .add(FullTextSegment.newInstanceOfX(3))  //  3 은행코드 // 9(3)
-                .add(FullTextSegment.newInstanceOfX(4))  //  4 전문구분코드
-                .add(FullTextSegment.newInstanceOfX(3))  //  5 업무구분코드
-                .add(FullTextSegment.newInstanceOf9(1))  //  6 송신회수
-                .add(FullTextSegment.newInstanceOf9(6))  //  7 전문번호
-                .add(FullTextSegment.newInstanceOfX(8))  //  8 전송일자 // 9(9)
-                .add(FullTextSegment.newInstanceOfX(6))  //  9 전송시간 // 9(6)
-                .add(FullTextSegment.newInstanceOfX(4))  // 10 응답코드
-                .add(FullTextSegment.newInstanceOfX(15)) // 11 예비영역1
-                .add(FullTextSegment.newInstanceOfX(11)) // 12 예비영역2
-                .add(FullTextSegment.newInstanceOfX(18)) // 13 예비영역3
-                .build();
+    static FullTextSection newInstance(final FullTextCategory category, final String textCode, final String taskCode) {
+        Objects.requireNonNull(category, "category is null");
+        Objects.requireNonNull(textCode, "textCode is null");
+        Objects.requireNonNull(taskCode, "taskCode is null");
+        final var segments = MAP.computeIfAbsent(category, tc -> new HashMap<>())
+                .computeIfAbsent(textCode, tc -> Collections.synchronizedMap(new HashMap<>()))
+                .computeIfAbsent(taskCode, tc -> FullTextSectionUtils.loadSegments(
+                        category.name() + textCode + '_' + tc + ".segments"
+                ));
+        return new FullTextSection(segments) {
+        };
     }
 
-    // -----------------------------------------------------------------------------------------------------------------
-    private FullTextSection(final BuilderImpl builder) {
+    // ---------------------------------------------------------------------------------------------------- CONSTRUCTORS
+    private FullTextSection(final List<FullTextSegment> segments) {
         super();
-        Objects.requireNonNull(builder, "builder is null");
-        this.segments = Collections.unmodifiableList(new ArrayList<>(builder.segments));
-        length = segments.stream()
-                .mapToInt(FullTextSegment::getLength)
+        this.segments = List.copyOf(segments);
+        length = this.segments.stream()
+                .mapToInt(s -> s.length)
                 .sum();
     }
 
+    // -----------------------------------------------------------------------------------------------------------------
+    @Override
+    public String toString() {
+        return super.toString() + '{' +
+                "segments=" + segments +
+                ",length=" + length +
+                '}';
+    }
+
+    @Override
+    public boolean equals(final Object obj) {
+        if (obj == null || getClass() != obj.getClass()) {
+            return false;
+        }
+        final var that = (FullTextSection) obj;
+        return length == that.length &&
+                Objects.equals(segments, that.segments);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(segments, length);
+    }
+
     // -------------------------------------------------------------------------------------------------------- segments
-    List<FullTextSegment> getSegments() {
-        return segments;
-    }
 
     @SuppressWarnings({
             "unchecked",
             "java:S1117" // Local variables should not shadow class fields
     })
-    <V> V getValue(final int index, final ByteBuffer buffer) {
+    public final <T> T getValue(final int index) {
         if (index <= 0) {
             throw new IllegalArgumentException("index(" + index + ") is not positive");
         }
         if (index > segments.size()) {
             throw new IllegalArgumentException("no segment at index(" + index + ")");
         }
-        Objects.requireNonNull(buffer, "buffer is null");
         final var segment = segments.get(index - 1);
         final var offset = segment.getOffset();
-        final var length = segment.getLength();
+        final var length = segment.length;
         final var encoded = new byte[length];
-        buffer.get(offset, encoded);
-        return ((FullTextSegmentCodec<V>) segment.getCodec()).decode(encoded, length);
+        text.buffer.get(offset, encoded);
+        return ((FullTextSegmentCodec<T>) segment.codec).decode(encoded, length);
     }
 
     @SuppressWarnings({
-            "unchecked",
             "java:S1117" // Local variables should not shadow class fields
     })
-    <V> void setValue(final int index, final ByteBuffer buffer, final V value) {
+    public void setValue(final int index, final Object value) {
         if (index <= 0) {
             throw new IllegalArgumentException("index(" + index + ") is not positive");
         }
         if (index > segments.size()) {
             throw new IllegalArgumentException("no segment at index(" + index + ")");
         }
-        Objects.requireNonNull(buffer, "buffer is null");
         final var segment = segments.get(index - 1);
         final var offset = segment.getOffset();
-        final var length = segment.getLength();
-        final var encoded = ((FullTextSegmentCodec<V>) segment.getCodec()).encode(value, length);
+        final var length = segment.length;
+        final var encoded = segment.codec.encode(value, length);
         assert encoded.length == length;
-        buffer.put(offset, encoded);
+        text.buffer.put(offset, encoded);
     }
 
-    public <V> FullTextSection value(final int index, final ByteBuffer buffer, final V value) {
-        setValue(index, buffer, value);
+    public FullTextSection value(final int index, final Object value) {
+        setValue(index, value);
         return this;
     }
 
     // ------------------------------------------------------------------------------------------------------------- int
-    public int int__(final int index, final ByteBuffer buffer) {
-        return this.<Integer>getValue(index, buffer);
+
+    /**
+     * Gets an {@code int} value, of the segment of specified index, from specified buffer.
+     *
+     * @param index the index of the segment.
+     * @return the value of the segment of specified index as {@code int}.
+     */
+    public final int int__(final int index) {
+        return this.<Integer>getValue(index);
     }
 
-    public FullTextSection int__(final int index, final ByteBuffer buffer, final int value) {
-        return value(index, buffer, value);
+    /**
+     * Sets specified new value, of the segment of specified index, to specified buffer.
+     *
+     * @param index the index of the segment.
+     * @param value new value for the segment.
+     * @return this section.
+     */
+    public final FullTextSection int__(final int index, final int value) {
+        return value(index, value);
     }
 
     // ------------------------------------------------------------------------------------------------------------ date
-    public LocalDate date_(final int index, final ByteBuffer buffer) {
-        final var value = this.<String>getValue(index, buffer);
-        return LocalDate.parse(value, FullTextSegmentCodecConstants.FORMATTER_DATE);
+    public final LocalDate date_(final int index) {
+        final var value = getValue(index);
+        return LocalDate.parse(String.valueOf(value), FullTextSegmentCodecConstants.FORMATTER_DATE);
     }
 
-    public FullTextSection date_(final int index, final ByteBuffer buffer, final LocalDate value) {
+    public final FullTextSection date_(final int index, final LocalDate value) {
         Objects.requireNonNull(value, "value is null");
-        setValue(index, buffer, FullTextSegmentCodecConstants.FORMATTER_DATE.format(value));
+        setValue(index, FullTextSegmentCodecConstants.FORMATTER_DATE.format(value));
         return this;
     }
 
     // ------------------------------------------------------------------------------------------------------------ time
-    public LocalTime time_(final int index, final ByteBuffer buffer) {
-        final var value = this.<String>getValue(index, buffer);
-        return LocalTime.parse(value, FullTextSegmentCodecConstants.FORMATTER_TIME);
+    public final LocalTime time_(final int index) {
+        final var value = getValue(index);
+        return LocalTime.parse(String.valueOf(value), FullTextSegmentCodecConstants.FORMATTER_TIME);
     }
 
-    public FullTextSection time_(final int index, final ByteBuffer buffer, final LocalTime value) {
+    public final FullTextSection time_(final int index, final LocalTime value) {
         Objects.requireNonNull(value, "value is null");
-        setValue(index, buffer, FullTextSegmentCodecConstants.FORMATTER_TIME.format(value));
+        setValue(index, FullTextSegmentCodecConstants.FORMATTER_TIME.format(value));
         return this;
     }
 
-    // --------------------------------------------------------------------------------------------------------- length
-    int getLength() {
+    // ---------------------------------------------------------------------------------------------------------- length
+    final int getLength() {
         return length;
     }
 
-    // -----------------------------------------------------------------------------------------------------------------
-    private final List<FullTextSegment> segments;
+    // ------------------------------------------------------------------------------------------------------------ text
+    void setText(final FullText text) {
+        this.text = text;
+    }
 
-    private final int length;
+    // -----------------------------------------------------------------------------------------------------------------
+    final List<FullTextSegment> segments;
+
+    final int length;
+
+    private FullText text;
 }
